<resources>
    <string name="app_name">Aptitude</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="aptitude">APTITUDE</string>
    <string name="welcome">Знакомство</string>
    <string name="Dash">Dash</string>
    <string name="Circle">Circle Full</string>
    <string name="name">Ваше имя или псевдоним</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="age">Возраст</string>
    <string name="start">НАЧАТЬ</string>
    <string name="title_activity_test">test</string>
    <string name="testin">Тестирование</string>
    <string name="no">НИКАК НЕТ</string>
    <string name="maybe">НЕ УВЕРЕН</string>
    <string name="yes">ОПРЕДЕЛЕННО ДА</string>
    <string name="title_activity_result">result</string>
    <string name="result">Результат</string>
    <string name="fail_description">Случайный график. Это происходит, когда человек отвечает на вопросы OCA случайным образом, потому что он не понимает вопросов или по каким-либо  причинам не был внимателен. Этот график не поддается объяснению.</string>
    <string name="A1">У Вас твердый устойчивый характер. Вы способны концентрировать внимание на ваших делах предельно хорошо. Вы принимаете решение, хорошо его обдумав, и можете указать пути его выполнения. У Вас есть свое собственное мнение, которое не зависит от ваших эмоций или чего-либо еще. Вы можете быть очень лояльным.</string>
    <string name="A2">У Вас достаточно стабильный характер. Вы можете с небольшими затруднениями концентрировать ваше внимание на текущих делах. Вы пытаетесь принимать решения, хорошо обдумав и хорошо оцениваете некоторые из них. Но Вы не всегда способны делать это, так как иногда Вы зависите от собственных эмоций и эмоций окружающих. Ваше мнение имеет тенденцию меняться.</string>
    <string name="A3">У Вас нестабильный характер. Вам довольно трудно сконцентрировать внимание на текущем деле, так как ваше внимание рассеяно на множество других дел или зафиксировано на какой-то неизученной вещи. Ваши решения не реальны, а оценки довольно слабы. Вы легко подвергаетесь влиянию окружающих, поэтому ваше мнение изменчиво. Вы часто меняете ваши решения.</string>
    <string name="A4">У Вас жутко нестабильный характер. У Вас плохая память, и Вы не можете сконцентрировать внимание на текущей задаче. Ваше внимание импульсивно перепрыгивает с одного на другое. Вы подвержены гипнозу, и поэтому ваши суждения, решения и мнения нереальны. Люди с трудом понимают Вас, поэтому Вы неуверенны и крайне импульсивны.</string>
    <string name="B1">В общем Вы довольно счастливы и бодры. Ваш подход к жизни полон юмора. Вы принимаете все с энтузиазмом и интересом. Вы надеетесь на будущее и перешагиваете все ваши неудачи. Любые проблемы или эмоциональные трудности Вы считаете лишь временными неудобствами. Вы легко возвращаетесь к нормальному состоянию духа.</string>
    <string name="B2">Вы довольно счастливы и бодры, но не всегда. проблемы и трудности в вашей жизни выбивают Вас из равновесия, и Вам не всегда легко вернуться в уравновешенное и счастливое состояние. Иногда Вы чувствуете, что ваше хорошее настроение зависит от других людей и обстоятельств, чаще чем Вы сами управляете вашей жизнью.</string>
    <string name="B3">Вы несчастливы и подавлены. У Вас пессимистический взгляд на жизнь. У Вас слишком много проблем и трудностей, поэтому обычно Вы - упавший духом, и Вам всегда трудно. Обычно Вы вините других людей, ситуацию или обстоятельства, нежели настоящие причины, в вашем подавленном состоянии, поэтому вашим друзьям и семье трудно с Вами.</string>
    <string name="B4">Вероятно, все так плохо, что этот пункт даже не рассматривается. Можно предположить имевший место во время тестирования летальный исход.</string>
    <string name="C1">Вы достаточно спокойны и невозмутимы, психически Вы - уравновешенный человек. Вы владеете собой. Вам не трудно держать себя в руках, независимо от любых происшествий вокруг Вас. Вы обладаете ровным темпераментом, и это помогает Вам в общении с семьей и друзьями. У Вас хорошее терпение.</string>
    <string name="C2">Вообще Вы спокойный человек, однако неприятности вокруг Вас иногда Вас раздражают. Чаще у Вас неровный темперамент. У Вас бывают периоды нервного состояния, но Вы способны овладеть собой. Вы склонны иногда быть нетерпеливым и даже невыносимым, что создает трудности для вашей семьи и друзей.</string>
    <string name="C3">Вы нервный и чрезмерно возбудимый человек. Ваши расстройства и волнения досаждают окружающим Вас. Вам трудно расслабиться, быть довольным собой или просто хорошо отдохнуть. Ваша привычка нервничать, о которой Вы даже не подозреваете, проявляется в раздражении. Вы легко отвлекаетесь и Вам трудно себя контролировать.</string>
    <string name="C4">Вы абсолютно нервный человек. У Вас нет настоящего контроля над собой даже при обычных обстоятельствах. Вы не можете расслабиться или успокоиться даже на короткий промежуток времени. Ваша привычка нервничать и постоянное состояние волнения сильно Вас раздражают. Вы очень нереальны и действуете бурно и даже истерично в ваших поступках. Почти все, что угодно обращает Вас в состояние растерянности.</string>
    <string name="D1">Вы очень уверены и полагаетесь на стабильность того, что Вы знаете и понимаете в жизни. Вы хорошо знаете себя, ваши активные и пассивные стороны, что Вы можете и чего не можете, ваши цели и амбиции в жизни. Ваше реалистическое отношение к себе не дает Вам совершать больших ошибок.</string>
    <string name="D2">Вы полагаетесь на свою реалистичность, испытывая при этом небольшие затруднения. Вы понимаете, что можете быть намного лучше. Вы не достаточно уверены в своих способностях, поэтому Вы иногда колеблетесь в вашем субъективном восприятии. У Вас есть некоторые проблемы с осознанием, чего Вы хотите добиться в жизни, но Вы не совершаете больших ошибок в выборе жизненного пути.</string>
    <string name="D3">По натуре Вы независимый человек. Вы недостаточно уверены в себе, что мешает Вам достигнуть поставленных в жизни целей. Из-за вашей неуверенности Вы не знаете, что Вам нужно, а что - нет. Это намного серьезней для Вас, чем то, что Вы не осознаете своих возможностей.</string>
    <string name="D4">Вы абсолютно независимы, и у Вас недостаток уверенности в себе. Вы абсолютно не уверены в своем прошлом, настоящем и будущем. Вы не знаете, во что Вы верите, что Вы знаете и что Вам нужно делать в жизни. У Вас нереалистичный подход к жизни, но это осложняется тем, что Вы действительно не знаете, чего Вы хотите. У Вас нет никаких гарантий по отношению к самому себе.</string>
    <string name="E1">Вы по натуре очень активный человек. Способны осознать, что Вам нужно, подумать и сделать это. Вы четко организовываете то, что делаете и получаете хорошие результаты без или с небольшими огрехами. Вы не бросите то, что важно и необходимо для Вас, у Вас есть энергия и упорство для завершения любого дела.</string>
    <string name="E2">Вы активный человек, но не способны завершить все, что Вы могли бы или хотели бы сделать. У Вас есть небольшие трудности с началом работы, а когда Вы все-таки начнете, Вам трудно довести ее до конца. Иногда Вы беретесь за то, что не сможете сделать или у Вас возникают затруднения с выбором занятия.</string>
    <string name="E3">Вы не активный человек. Вам трудно начинать дела, которые Вам необходимо или хотелось бы сделать. После того, как Вы наконец начали дело, Вам также трудно его продвигать и закончить. Вам трудно на работе, поэтому и по другим причинам, Вам трудно ее сохранить.</string>
    <string name="E4">Вы совсем не активный человек. Вам практически невозможно заставить себя начать даже очень необходимое для Вас дело, Вам так же очень трудно продвигать дело к завершению Ваша семья и начальники считают Вам ленивым и трудно управляемым, плохо относящимся к работе и вообще работающим с трудом.</string>
    <string name="F1">По натуре Вы способный и открытый человек. Вы довольно хорошо справляетесь с выполнением того, что поставили перед собой в жизни. Вы непосредственны и прямы в отношениях с людьми не только на работе и в профессиональном общении, но и с семьей и друзьями. Благодаря таким прямым и ясным отношениям Вы способны контролировать людей и справляться с любой жизненной ситуацией.</string>
    <string name="F2">По натуре Вы способный и открытый человек, но вероятно, не до такой степени, до какой должны или хотели бы быть. Несмотря на ваши способности, Вам немного трудно управлять вашей жизнью и работой. Часть ваших трудностей состоит в том, что Вы не слишком способны управлять людьми и давать необходимые инструкции.</string>
    <string name="F3">Вы сдержанный и покорный в отношениях с людьми, и поэтому не приспособлены к жизни. Вы послушны и обходительны с другими, так как Вы боитесь, что они подумают, скажут или сделают по отношению к Вам. Эта боязнь других людей не позволяет Вам быть искренним и открытым в вашей семье, с друзьями на работе.</string>
    <string name="F4">Вы очень плохого мнения о жизни, так как Вы слишком сдержанны и покорны. Вы определенно интроверт (обращены в себя), который боится столкнуться с управлением людьми или чем-либо еще. Вы также боитесь всего, что не полностью Вам понятно. Эта боязнь создает хаос и проблемы для Вам с вашим окружением.</string>
    <string name="G1">По натуре Вы довольно ответственный человек. Вы чувствуете, что Вы имеете определенный контроль над своей жизнью. Вы способны взять на себя что-либо и быть уверенным в удаче или провале дела. Вы способны встретить любую ситуацию лицом к лицу и решить ее наилучшим образом, вместо того, чтобы считать, что это обязанности других, или думать, что это все равно ничего Вам не даст.</string>
    <string name="G2">Вы не настолько ответственны, насколько должны быть. Между прочим, это причина того, что другие, в большей или меньшей степени, управляют вашей жизнью, будь то босс, друг или член семьи. Вы могли бы намного лучше контролировать свою жизнь, но предпочитаете не брать на себя слишком много ответственности, так как если у Вас что-то не получится, Вы будете чувствовать себя виноватым.</string>
    <string name="G3">Вы безответственны в вашей жизни и на работе. Вы сваливаете всю вашу ответственность на других, будь то босс, друг или член семьи. Вы знаете, что у Вас нет контроля над вашей жизнью, над тем, что Вы делаете, над тем, кто Вы и чего Вы хотите добиться в жизни. Хотя Вы чувствуете, что другие могут контролировать ваше поведение, Вы действительно неспособны по-настоящему контролировать себя.</string>
    <string name="G4">Вы полностью безответственны. Вы обвиняете других в том, что они управляют вашей жизнью, но на самом деле все ваши неудачи происходят тогда, когда Вы оставляете вашу ответственность на других.</string>
    <string name="H1">Вы человек с высокой и правильной оценкой. Вы можете получать удовольствие от общения с вашим окружением. Вы правильно принимаете жизнь и способны видеть и плохие, и хорошие стороны людей и жизни. У Вас действительно правильная оценка ситуаций, поэтому Вы проницательный человек.</string>
    <string name="H2">Вы склонны к критике, но так же не можете быть справедливы в оценке людей и событий. Вы воспринимаете небольшие недостатки в людях слишком сильно, это не позволяет Вам правильно оценивать все их хорошие стороны. Вы не так хороши, как могли бы или должны бы быть.</string>
    <string name="H3">Вы критичный человек. Другим людям трудно с Вами, потому что Вы экспрессивны и, хотя и не всегда, порицаете других людей. Так как Вы всегда видите только плохую сторону, Вы не замечаете много хорошего. В результате у Вас слабая способность правильно оценивать людей и обстоятельства.</string>
</resources>