<RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#eae6e4">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingTop="20dp" android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="false" android:layout_marginLeft="10dp" android:layout_alignParentTop="true"
            android:layout_marginRight="10dp" android:layout_marginTop="5dp" android:id="@+id/navHead">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgDash1" android:paddingLeft="10dp" android:src="@drawable/div"
                android:layout_gravity="center_vertical" android:layout_weight="0.1" android:scaleType="centerCrop"
                android:contentDescription="@string/Dash"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgCircle1" android:src="@drawable/dot" android:paddingLeft="5dp"
                android:paddingRight="5dp" android:contentDescription="@string/Circle"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgDash2" android:src="@drawable/div" android:layout_gravity="center_vertical"
                android:scaleType="centerCrop" android:layout_weight="0.25" android:contentDescription="@string/Dash"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgCircle2" android:paddingLeft="5dp" android:paddingRight="5dp"
                android:src="@drawable/dotnext" android:contentDescription="@string/Circle"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgDash3" android:src="@drawable/div" android:layout_gravity="center_vertical"
                android:tint="#e2dcd8" android:scaleType="centerCrop" android:layout_weight="0.25"
                android:contentDescription="@string/Dash"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgCircle3" android:src="@drawable/dotempty" android:paddingLeft="5dp"
                android:paddingRight="5dp" android:contentDescription="@string/Circle"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgDash4" android:layout_gravity="center_vertical" android:src="@drawable/div"
                android:paddingRight="10dp" android:tint="#e2dcd8" android:layout_weight="0.1"
                android:scaleType="centerCrop" android:contentDescription="@string/Dash"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/welcome"
            android:id="@+id/txtTooltip" android:background="@drawable/tooltip" android:textColor="#f09984"
            android:textAlignment="center" android:paddingLeft="6dp" android:paddingRight="6dp"
            android:layout_below="@id/navHead" android:layout_marginTop="5dp"
            android:layout_marginLeft="28dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/btnStart" android:layout_gravity="center"
            android:background="@drawable/btnno_bg" android:textAlignment="center" android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="24sp" android:paddingLeft="30dp"
            android:paddingRight="30dp" android:paddingTop="10dp" android:paddingBottom="10dp"
            android:focusableInTouchMode="false" android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" android:layout_marginBottom="40dp" android:onClick="onClick"/>
    <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="85"
            android:progress="0"
            android:minHeight="2dp"
            android:maxHeight="2dp"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/dot"
            android:layout_gravity="center_horizontal" android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_above="@id/btnStart" android:layout_marginBottom="40dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/age"
            android:id="@+id/txtAge" android:layout_gravity="center_horizontal"
            android:textColor="#e39480" android:layout_marginTop="20dp" android:layout_alignParentLeft="false"
            android:layout_marginLeft="20dp"
            android:layout_above="@id/seekBar" android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:layout_above="@id/txtAge" android:id="@+id/genderLay">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgMale" android:src="@drawable/male"
                android:scaleType="center"
                android:contentDescription="@string/male"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/darker_gray" android:layout_marginLeft="30dp"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/male"
                android:id="@+id/txtMale" android:layout_gravity="center_vertical"
                android:textColor="@android:color/darker_gray" android:layout_weight="0.3"
                android:layout_marginLeft="10dp" android:onClick="onClick" android:clickable="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgFemale" android:src="@drawable/female" android:padding="10dp"
                android:contentDescription="@string/female" android:tint="@android:color/darker_gray"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/female"
                android:id="@+id/txtFemale" android:textColor="@android:color/darker_gray" android:layout_gravity="center_vertical"
                android:layout_weight="0.3" android:onClick="onClick" android:clickable="true"/>
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/etName" android:layout_gravity="center_horizontal" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" android:layout_marginTop="10dp" android:textColor="#f09984"
            android:hint="@string/name"
            android:layout_above="@id/genderLay" android:layout_marginBottom="20dp"/>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgDiv" android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop" android:src="@drawable/tiny_div"
            android:contentDescription="@string/Dash"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:layout_above="@id/etName"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/aptitude"
            android:id="@+id/txtAppname" android:layout_gravity="center_horizontal" android:gravity="center_horizontal"
            android:textColor="#63b6c6" android:textSize="48sp" android:textStyle="bold" android:typeface="normal"
            android:layout_above="@+id/imgDiv"/>

</RelativeLayout>